--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,58 +8,56 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: windows-latest
+    env:
+      WEB_PROJECT_PATH: ${{ github.workspace }}\WebsiteGym.Web
+      IIS_EXPRESS_PATH: 'C:\Program Files\IIS Express\iisexpress.exe'
+      IIS_PORT: 5000
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    - name: Setup IIS Express path
+    - name: Start IIS Express on port 5000
       shell: pwsh
       run: |
-        $iisPath = "${env:ProgramFiles(x86)}\IIS Express\iisexpress.exe"
-        Write-Output "IIS Express path: $iisPath"
-
-    - name: Start IIS Express
-      shell: pwsh
-      run: |
-        $webProjectPath = "$env:GITHUB_WORKSPACE\WebsiteGym.Web"
-        $iisPath = "${env:ProgramFiles(x86)}\IIS Express\iisexpress.exe"
-        
-        # Pornim IIS Express direct pe folderul proiectului, port 44336
-        $arguments = "/path:`"$webProjectPath`" /port:44336"
-        Write-Output "Starting IIS Express with args: $arguments"
-        
-        Start-Process -FilePath $iisPath -ArgumentList $arguments -NoNewWindow
-        
-        # Așteptăm să se pornească
-        Start-Sleep -Seconds 10
-
-    - name: Check if IIS Express port is open
-      shell: pwsh
-      run: |
-        $port = 44336
+        Write-Host "Starting IIS Express with path: $env:WEB_PROJECT_PATH and port: $env:IIS_PORT"
+        Start-Process -FilePath $env:IIS_EXPRESS_PATH -ArgumentList "/path:`"$env:WEB_PROJECT_PATH`" /port:$env:IIS_PORT" -NoNewWindow
+        Write-Host "Waiting for IIS Express to start..."
         $maxAttempts = 15
         $attempt = 0
-        $open = $false
-
-        while ($attempt -lt $maxAttempts -and -not $open) {
-          try {
-            $tcpClient = New-Object System.Net.Sockets.TcpClient("localhost", $port)
-            $open = $true
-            $tcpClient.Close()
-          } catch {
-            Write-Output "Port $port not open yet, retrying... attempt $($attempt + 1) of $maxAttempts"
-            Start-Sleep -Seconds 2
-          }
+        do {
+          Start-Sleep -Seconds 2
+          $isListening = netstat -ano | Select-String ":$env:IIS_PORT"
           $attempt++
+          if ($isListening) {
+            Write-Host "Port $env:IIS_PORT is now listening."
+            break
+          } else {
+            Write-Host "Port $env:IIS_PORT not open yet, retrying... attempt $attempt of $maxAttempts"
+          }
+        } while ($attempt -lt $maxAttempts)
+
+        if (-not $isListening) {
+          Write-Error "Port $env:IIS_PORT is NOT open after $maxAttempts attempts"
+          exit 1
         }
 
-        if (-not $open) {
-          Write-Error "Port $port is NOT open after $maxAttempts attempts"
+    - name: Test IIS Express HTTP endpoint
+      shell: pwsh
+      run: |
+        try {
+          $response = Invoke-WebRequest http://localhost:$env:IIS_PORT/ -UseBasicParsing -TimeoutSec 10
+          if ($response.StatusCode -eq 200) {
+            Write-Host "IIS Express responded with status 200 OK"
+          } else {
+            Write-Error "Unexpected status code: $($response.StatusCode)"
+            exit 1
+          }
+        } catch {
+          Write-Error "Failed to connect to IIS Express: $_"
           exit 1
-        } else {
-          Write-Output "Port $port is open."
         }
 
     - name: Install dependencies
