--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,33 +1,29 @@
 name: Playwright Tests
-
 on:
-  workflow_dispatch: {}
   push:
-    branches: [main]
+    branches: [ main, master ]
   pull_request:
-
+    branches: [ main, master ]
 jobs:
   test:
-    runs-on: windows-latest
-
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
 
-      - name: Build solution with MSBuild
-        uses: microsoft/setup-msbuild@v1.1
-
-      - run: msbuild WebsiteGym.sln /p:Configuration=Debug
-
-      - name: Start the web app
-        run: |
-          cd WebsiteGym.Web
-          start /B cmd /c "bin\Debug\WebsiteGym.Web.exe"
-          timeout /t 10
-
-      - name: Install Playwright and run tests
-        run: |
-          cd PlaywrightTests
-          npm ci
-          npx playwright install
-          npx playwright test
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+      
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
